--- a/CurrencyConverter/app/src/main/res/values/strings.xml
+++ b/CurrencyConverter/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title">Currency converter</string>
     <string name="switchEUR_USD">Switch</string>
     <string name="action_settings">Settings</string>
+    <string name="cadet">CADEEEEET</string>
 </resources>
