--- a/CurrencyConverter/app/src/main/res/values/strings.xml
+++ b/CurrencyConverter/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">CurrencyConverter</string>
     <string name="euro">EUR</string>
     <string name="dollar">USD</string>
-    <string name="commission">Commission</string>
+    <string name="commission">Apply Commission(%)</string>
     <string name="title">Currency converter</string>
-    <string name="switchEUR_USD">Switch</string>
     <string name="action_settings">Settings</string>
-    <string name="CADET">CADET!!!</string>
+    <string name="currency">Currency</string>
+    <string name="wc">With Commission</string>
+    <string name="nc">Without Commission</string>
 </resources>
